refactoring icon alignment issue

--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -23,8 +23,8 @@
 
 .fontIcon {
     margin-top:45px;
-    padding-right: 5px;
-    margin-left: 140px;
+    /* padding-right: 5px; */
+    margin-left: 160px;
     color: white;
     font-size: 3rem;
     /* text-align: center; */
